# txt2dub

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
txt2dub/: __main__.py  app.py
txt2dub/models/: __init__.py  base.py  script.py
txt2dub/screens/file/: __init__.py  screen.py  widgets.py
txt2dub/screens/script/: __init__.py  messages.py  screen.py  widgets.py
txt2dub/services/: actions.py  tts.py
txt2dub/styles/: app.css
txt2dub/tts/: __main__.py  interpreter.py
txt2dub/widgets/: base.py  logo.py
